# Computer-Graphics

./: README.md
CG Using OpenGL textbook/: readme
CG Using OpenGL textbook/jewTest/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project2.1/: main.cpp
CG Using OpenGL textbook/project3.2.6Bigger/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project3.2.setView/: 1.out  CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project4.5.4lerpAnime/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project4.6.1circleByPoints/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Point.cpp  main.cpp
CG Using OpenGL textbook/project5.5.2hexDraw/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project5.6.3normalShape/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/project6.2_3vnTest/: CMakeLists.txt  SDL.cpp  SDL.h  function.3vn  main.cpp
CG Using OpenGL textbook/test/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/textbook/: CMakeLists.txt  main.cpp
CG Using OpenGL textbook/untitled/: CMakeLists.txt  main.cpp
OpenGL Web tutorial/colorBuildTest/: CMakeLists.txt  LoadElement.cpp  LoadElement.h  Shader.cpp  Shader.h  fragmentShader.fs  init.cpp  lightShader.fs  lightShader.vs  main.cpp  vertexShader.vs
OpenGL Web tutorial/project_Test/: CMakeLists.txt  main.cpp
OpenGL Web tutorial/shaderMore/: CMakeLists.txt  fragmentShader.fs  init.cpp  init.h  main.cpp  vertexShader.vs
OpenGL Web tutorial/textrueTest/: CMakeLists.txt  Shader.h  fragmentShader.fs  init.cpp  main.cpp  vertexShader.vs
material/: glad.c
(+9 files in other folders)
